--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 @import'./components/Fpage.css';
 @import'./components/Dash.css';
 @import'./components/PasswordReset.css';
+@import'./components/Profile.css';
 
 
 
